Prevent collapsing a wall filtered to only one meme

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -129,6 +129,10 @@ div.controls {
     transition: none;
   }
 
+  &:not(.single) {
+    cursor: pointer;
+  }
+
   div {
     display: inline;
   }
